Avoid button overflow

--- a/core/src/main/web/app/styles/ui.scss
+++ b/core/src/main/web/app/styles/ui.scss
@@ -26,6 +26,10 @@
   }
 }
 
+.btn {
+  overflow-x: hidden;
+}
+
 .text-danger {
   color: #a94442 !important;
 }
